tests/paczka2/big_fuzzy/24473342.err
Error in line 2: x5nXAVqz0 A775 97,6
Error in line 3: Dh6eSc A251 44,9
Error in line 23: x5nXAVqz0 A775 16,3
Error in line 28: x5nXAVqz0 A251 52,7
Error in line 14: Dh6eSc S344 20,5
Error in line 36: UKo9TG A251 88,7
Error in line 37: UKo9TG A775 37,3
Error in line 42: x5nXAVqz0 A775 47,2
Error in line 47: A775 S206 66,8
Error in line 32: Dh6eSc S206 53,4
Error in line 65: fNR0mnJ A251 90,3
Error in line 75: A775 A775 39,72
Error in line 72: fNR0mnJ S344 49,3
Error in line 66: A775 A775 35,3
Error in line 93: fNR0mnJ A251 68,4
Error in line 97: Dh6eSc A775 75,8
Error in line 96: fNR0mnJ S344 88,6
Error in line 115: uZ3pO7bEoX A775 96,13
Error in line 110: uZ3pO7bEoX A251 91,1
Error in line 107: UKo9TG S344 76,6
Error in line 116: uZ3pO7bEoX A775 222,5
Error in line 129: x5nXAVqz0 S344 30,4
Error in line 138: gOamoM43 S344 86,2
Error in line 143: UKo9TG S344 54,7
Error in line 131: x5nXAVqz0 S206 46,7
Error in line 159: UKo9TG S206 70,91
Error in line 151: Dh6eSc S344 72,1
Error in line 163: UKo9TG S206 102,3
Error in line 174: UKo9TG S344 87,5
Error in line 178: fNR0mnJ S344 8,1
Error in line 184: fNR0mnJ S206 72,7
Error in line 188: gOamoM43 S344 45,7
Error in line 198: x5nXAVqz0 S206 97,1
Error in line 194: gOamoM43 S206 9,4
Error in line 215: Dh6eSc A775 55,1
Error in line 217: gOamoM43 S206 95,9
Error in line 222: uZ3pO7bEoX S344 95,3
Error in line 223: x5nXAVqz0 S206 63,7
Error in line 238: uZ3pO7bEoX S206 47,1
